ves-middle/tests/t8_test_for_loops.test
for i = 0; i < 10; ++i {
    i = 11
}

for i in 0..10, 3 {
    i = 11
}

%output

error: For-each loop variables may not be reassigned
  ┌─ <source: #cbadf250af71c943>:6:5
  │
6 │     i = 11
  │     ^

warning: Variable `i` is never used
  ┌─ <source: #cbadf250af71c943>:5:5
  │
5 │ for i in 0..10, 3 {
  │     ^
  │     │
  │     help: if this is intentional, replace or prefix it with an underscore: `_i`
